# pybuddy

./: .gitignore  CLAUDE.md  pyproject.toml  test_sample.py
examples/: hover_test.py
src/pybuddy/: __init__.py  cli.py  config.py  personality.py
src/pybuddy/analyzer/: ai_advisor.py  ast_analyzer.py  element_extractor.py  explain_advisor.py  notebook.py
src/pybuddy/commands/: analyze.py  chat.py  explain.py  watch.py
src/pybuddy/output/: notifier.py  terminal.py
tests/: test_ai_advisor.py  test_ast_analyzer.py  test_cli.py  test_element_extractor.py  test_explain_advisor.py  test_notebook.py
vscode-pybuddy/: .vscodeignore  README.md  package-lock.json  package.json
vscode-pybuddy/src/: extension.ts
